--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ project( elastix )
 list( APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMake )
 
 if (CMAKE_BUILD_TYPE STREQUAL "Release")
+  message(STATUS "Adding native compiler flags.")
   add_compile_options(-march=native;-mtune=native)
   if(DEFINED ENV{CMAKE_BUILD_PARALLEL_LEVEL})
     add_compile_options("-flto=$ENV{CMAKE_BUILD_PARALLEL_LEVEL}")
