--- a/experiments/.pre-commit-config.yaml
+++ b/experiments/.pre-commit-config.yaml
@@ -3,6 +3,6 @@ repos:
     hooks:
       - id: system
         name: Requirements
-        entry: bash -c 'cd experiments && poetry export --format=requirements.txt --without-hashes --output=requirements.txt'
+        entry: bash -c 'cd experiments && poetry export --only=main --format=requirements.txt --without-hashes --output=requirements.txt'
         pass_filenames: false
         language: system
