--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -20,6 +20,7 @@ joblib = "^1.2.0"
 SimpleITK = "^2.2.0"
 seaborn = "^0.12.0"
 matplotlib = "^3.5.1"
+scikit-image = "^0.19.3"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
