--- a/experiments/requirements.txt
+++ b/experiments/requirements.txt
@@ -14,9 +14,11 @@ fonttools==4.38.0 ; python_version >= "3.8" and python_version < "3.11"
 gitdb==4.0.9 ; python_version >= "3.8" and python_version < "3.11"
 gitpython==3.1.29 ; python_version >= "3.8" and python_version < "3.11"
 idna==3.4 ; python_version >= "3.8" and python_version < "3.11"
+imageio==2.22.2 ; python_version >= "3.8" and python_version < "3.11"
 joblib==1.2.0 ; python_version >= "3.8" and python_version < "3.11"
 kiwisolver==1.4.4 ; python_version >= "3.8" and python_version < "3.11"
 matplotlib==3.6.1 ; python_version >= "3.8" and python_version < "3.11"
+networkx==2.8.7 ; python_version >= "3.8" and python_version < "3.11"
 nibabel==3.2.2 ; python_version >= "3.8" and python_version < "3.11"
 numpy==1.23.4 ; python_version >= "3.8" and python_version < "3.11"
 packaging==21.3 ; python_version >= "3.8" and python_version < "3.11"
@@ -33,9 +35,11 @@ pyparsing==3.0.9 ; python_version >= "3.8" and python_version < "3.11"
 python-dateutil==2.8.2 ; python_version >= "3.8" and python_version < "3.11"
 python-dotenv==0.19.2 ; python_version >= "3.8" and python_version < "3.11"
 pytz==2022.5 ; python_version >= "3.8" and python_version < "3.11"
+pywavelets==1.4.1 ; python_version >= "3.8" and python_version < "3.11"
 pyyaml==6.0 ; python_version >= "3.8" and python_version < "3.11"
 redis==4.3.4 ; python_version >= "3.8" and python_version < "3.11"
 requests==2.28.1 ; python_version >= "3.8" and python_version < "3.11"
+scikit-image==0.19.3 ; python_version >= "3.8" and python_version < "3.11"
 scipy==1.9.3 ; python_version >= "3.8" and python_version < "3.11"
 seaborn==0.12.0 ; python_version >= "3.8" and python_version < "3.11"
 sentry-sdk==1.10.1 ; python_version >= "3.8" and python_version < "3.11"
@@ -47,6 +51,7 @@ simpleitk==2.2.0 ; python_version >= "3.8" and python_version < "3.11"
 six==1.16.0 ; python_version >= "3.8" and python_version < "3.11"
 smmap==5.0.0 ; python_version >= "3.8" and python_version < "3.11"
 sshtunnel==0.4.0 ; python_version >= "3.8" and python_version < "3.11"
+tifffile==2022.10.10 ; python_version >= "3.8" and python_version < "3.11"
 tomli==2.0.1 ; python_version >= "3.8" and python_version < "3.11"
 tqdm==4.64.1 ; python_version >= "3.8" and python_version < "3.11"
 typing-extensions==4.4.0 ; python_version >= "3.8" and python_version < "3.11"
