--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -28,7 +28,6 @@ black = "^22.1.0"
 pandas = "^1.4.1"
 ipykernel = "^6.11.0"
 plotly = "^5.10.0"
-SciencePlots = "^1.0.9"
 ipywidgets = "^7.7.1"
 numdifftools = "^0.9.40"
 Cython = "^0.29.32"
@@ -37,6 +36,7 @@ dictquery = "^0.4.0"
 [tool.poetry.group.dev.dependencies]
 yapf = "^0.32.0"
 pylint = "^2.15.3"
+tabulate = "^0.9.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
