--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -37,6 +37,7 @@ dictquery = "^0.4.0"
 yapf = "^0.32.0"
 pylint = "^2.15.3"
 tabulate = "^0.9.0"
+ipympl = "^0.9.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
