--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -21,6 +21,7 @@ SimpleITK = "^2.2.0"
 seaborn = "^0.12.0"
 matplotlib = "^3.5.1"
 scikit-image = "^0.19.3"
+pymoo = "^0.6.0.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
