--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -22,6 +22,10 @@ seaborn = "^0.12.0"
 matplotlib = "^3.5.1"
 scikit-image = "^0.19.3"
 pymoo = "^0.6.0.1"
+mplcairo = "^0.5"
+pycairo = "^1.23.0"
+pyqt5 = "^5.15.9"
+pyqt6 = "^6.4.2"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
