fix chunk allocation bug, write registration params end of registration, python parameters wrapper, calc reference point max values

--- a/Components/Optimizers/MORVGOMEA/CMakeLists.txt
+++ b/Components/Optimizers/MORVGOMEA/CMakeLists.txt
@@ -15,7 +15,5 @@ ADD_ELXCOMPONENT(MOGOMEA
 )
 
 # target_link_libraries(MOGOMEA
-#   BLAS::BLAS
-#   LAPACK::LAPACK
-#   Boost::boost
+#   mcheck
 # )
