--- a/experiments/requirements.txt
+++ b/experiments/requirements.txt
@@ -1,39 +1,39 @@
 about-time==4.2.1 ; python_version >= "3.8" and python_version < "3.11"
-alive-progress==3.0.1 ; python_version >= "3.8" and python_version < "3.11"
+alive-progress==3.1.1 ; python_version >= "3.8" and python_version < "3.11"
 async-timeout==4.0.2 ; python_version >= "3.8" and python_version < "3.11"
 autograd==1.5 ; python_version >= "3.8" and python_version < "3.11"
 bcrypt==4.0.1 ; python_version >= "3.8" and python_version < "3.11"
 certifi==2022.12.7 ; python_version >= "3.8" and python_version < "3.11"
 cffi==1.15.1 ; python_version >= "3.8" and python_version < "3.11"
-charset-normalizer==3.0.1 ; python_version >= "3.8" and python_version < "3.11"
+charset-normalizer==3.1.0 ; python_version >= "3.8" and python_version < "3.11"
 click==8.1.3 ; python_version >= "3.8" and python_version < "3.11"
 cma==3.2.2 ; python_version >= "3.8" and python_version < "3.11"
 colorama==0.4.6 ; python_version >= "3.8" and python_version < "3.11" and platform_system == "Windows"
 contourpy==1.0.7 ; python_version >= "3.8" and python_version < "3.11"
-cryptography==39.0.2 ; python_version >= "3.8" and python_version < "3.11"
+cryptography==40.0.1 ; python_version >= "3.8" and python_version < "3.11"
 cycler==0.11.0 ; python_version >= "3.8" and python_version < "3.11"
 deprecated==1.2.13 ; python_version >= "3.8" and python_version < "3.11"
 dill==0.3.6 ; python_version >= "3.8" and python_version < "3.11"
 docker-pycreds==0.4.0 ; python_version >= "3.8" and python_version < "3.11"
-fonttools==4.38.0 ; python_version >= "3.8" and python_version < "3.11"
+fonttools==4.39.3 ; python_version >= "3.8" and python_version < "3.11"
 future==0.18.3 ; python_version >= "3.8" and python_version < "3.11"
 gitdb==4.0.10 ; python_version >= "3.8" and python_version < "3.11"
 gitpython==3.1.31 ; python_version >= "3.8" and python_version < "3.11"
 grapheme==0.6.0 ; python_version >= "3.8" and python_version < "3.11"
 idna==3.4 ; python_version >= "3.8" and python_version < "3.11"
-imageio==2.26.0 ; python_version >= "3.8" and python_version < "3.11"
+imageio==2.27.0 ; python_version >= "3.8" and python_version < "3.11"
 importlib-resources==5.12.0 ; python_version >= "3.8" and python_version < "3.10"
 joblib==1.2.0 ; python_version >= "3.8" and python_version < "3.11"
 kiwisolver==1.4.4 ; python_version >= "3.8" and python_version < "3.11"
 matplotlib==3.7.1 ; python_version >= "3.8" and python_version < "3.11"
-networkx==3.0 ; python_version >= "3.8" and python_version < "3.11"
+networkx==3.1 ; python_version >= "3.8" and python_version < "3.11"
 nibabel==3.2.2 ; python_version >= "3.8" and python_version < "3.11"
 numpy==1.24.2 ; python_version < "3.11" and python_version >= "3.8"
 packaging==23.0 ; python_version >= "3.8" and python_version < "3.11"
 pandas==1.5.3 ; python_version >= "3.8" and python_version < "3.11"
-paramiko==3.0.0 ; python_version >= "3.8" and python_version < "3.11"
+paramiko==3.1.0 ; python_version >= "3.8" and python_version < "3.11"
 pathtools==0.1.2 ; python_version >= "3.8" and python_version < "3.11"
-pillow==9.4.0 ; python_version >= "3.8" and python_version < "3.11"
+pillow==9.5.0 ; python_version >= "3.8" and python_version < "3.11"
 promise==2.3 ; python_version >= "3.8" and python_version < "3.11"
 protobuf==3.20.3 ; python_version >= "3.8" and python_version < "3.11"
 psutil==5.9.4 ; python_version >= "3.8" and python_version < "3.11"
@@ -43,25 +43,28 @@ pynacl==1.5.0 ; python_version >= "3.8" and python_version < "3.11"
 pyparsing==3.0.9 ; python_version >= "3.8" and python_version < "3.11"
 python-dateutil==2.8.2 ; python_version >= "3.8" and python_version < "3.11"
 python-dotenv==0.19.2 ; python_version >= "3.8" and python_version < "3.11"
-pytz==2022.7.1 ; python_version >= "3.8" and python_version < "3.11"
+pytz==2023.3 ; python_version >= "3.8" and python_version < "3.11"
 pywavelets==1.4.1 ; python_version >= "3.8" and python_version < "3.11"
 pyyaml==6.0 ; python_version >= "3.8" and python_version < "3.11"
-redis==4.5.1 ; python_version >= "3.8" and python_version < "3.11"
+redis==4.5.4 ; python_version >= "3.8" and python_version < "3.11"
 requests==2.28.2 ; python_version >= "3.8" and python_version < "3.11"
 scikit-image==0.19.3 ; python_version >= "3.8" and python_version < "3.11"
 scipy==1.10.1 ; python_version >= "3.8" and python_version < "3.11"
 seaborn==0.12.2 ; python_version >= "3.8" and python_version < "3.11"
-sentry-sdk==1.16.0 ; python_version >= "3.8" and python_version < "3.11"
+sentry-sdk==1.19.1 ; python_version >= "3.8" and python_version < "3.11"
 setproctitle==1.3.2 ; python_version >= "3.8" and python_version < "3.11"
-setuptools==67.4.0 ; python_version >= "3.8" and python_version < "3.11"
+setuptools-scm==7.1.0 ; python_version >= "3.8" and python_version < "3.11"
+setuptools==67.6.1 ; python_version >= "3.8" and python_version < "3.11"
 shortuuid==1.0.11 ; python_version >= "3.8" and python_version < "3.11"
 simpleitk==2.2.1 ; python_version >= "3.8" and python_version < "3.11"
 six==1.16.0 ; python_version >= "3.8" and python_version < "3.11"
 smmap==5.0.0 ; python_version >= "3.8" and python_version < "3.11"
 sshtunnel==0.4.0 ; python_version >= "3.8" and python_version < "3.11"
-tifffile==2023.2.28 ; python_version >= "3.8" and python_version < "3.11"
+tifffile==2023.3.21 ; python_version >= "3.8" and python_version < "3.11"
+tomli==2.0.1 ; python_version >= "3.8" and python_version < "3.11"
 tqdm==4.65.0 ; python_version >= "3.8" and python_version < "3.11"
-urllib3==1.26.14 ; python_version >= "3.8" and python_version < "3.11"
+typing-extensions==4.5.0 ; python_version >= "3.8" and python_version < "3.11"
+urllib3==1.26.15 ; python_version >= "3.8" and python_version < "3.11"
 wandb==0.12.21 ; python_version >= "3.8" and python_version < "3.11"
 wcwidth==0.2.6 ; python_version >= "3.8" and python_version < "3.11"
 wrapt==1.15.0 ; python_version >= "3.8" and python_version < "3.11"
